# rusca

./: Cargo.toml  passwords.txt
src/: bruteforce_manager.rs  export.rs  main.rs  model.rs  modules.rs  reports.rs  scan.rs  ws.rs
src/bruteforce/: ftp.rs  mod.rs  rtsp.rs  rtsp_authgrinder.rs  ssh.rs
static/: index.html
