[package]
name = "rusca_web_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
rand = "0.8"
chrono = "0.4"
ssh2 = "0.9"
base64 = "0.21"
once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

myrustscan = "2.4"
async-std = "1.13"

